--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,13 @@
 kotlin.code.style=official
+
+pluginGroup = org.hyperskill.mobile.arch
+pluginName = kmm-feature-template-plugin
+pluginVersion = 1.0.1
+# See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+# for insight into build numbers and IntelliJ Platform versions.
+pluginSinceBuild = 233
+pluginUntilBuild = 241.*
+
+# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
+platformType = IC
+platformVersion = 2024.1
